Only reset V8Callable pointer in Playlist from NodePlaylist when the pointer is actually the object being deleted
Replaced the spotify thread with the usage of libuvs default loop. Login, playback and search tested and possible

Callback handling adjusted to the new thread handling.

Refactored all spotify objects to use getters and call libspotify API in those getters instead of ctor initialization

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Sourcecode not to commit
 appkey.c
 logindata.c
+loginData.js
 
 # output
 build
@@ -18,3 +19,7 @@ events.js
 #IntelliJ
 *.iml
 .idea
+
+# other files
+executes.txt
+TODOS
