Added QtCreator files to npmignore

--- a/.npmignore
+++ b/.npmignore
@@ -4,3 +4,10 @@ copyright.txt
 TODOS
 spotify_appkey.key
 test
+
+#qt creator
+node-spotify.config
+node-spotify.creator
+node-spotify.creator.user
+node-spotify.files
+node-spotify.includes
