--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
-before_script:
+before_install:
   - wget https://developer.spotify.com/download/libspotify/libspotify-12.1.51-Linux-x86_64-release.tar.gz
   - tar xzf /tmp/libspotify.tar.gz
   - pushd libspotify-12.1.51-Linux-x86_64-release && sudo make install && popd
