--- a/.travis.yml
+++ b/.travis.yml
@@ -15,5 +15,5 @@ addons:
       - g++-4.8
 before_install:
   - wget https://developer.spotify.com/download/libspotify/libspotify-12.1.51-Linux-x86_64-release.tar.gz
-  - tar xzf /tmp/libspotify.tar.gz
+  - tar xzf libspotify-12.1.51-Linux-x86_64-release.tar.gz
   - pushd libspotify-12.1.51-Linux-x86_64-release && sudo make install && popd
