--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ node_js:
   - "4"
   - "0.12"
   - "0.10"
+sudo: false
 env:
   - CXX=g++-4.8
 addons:
@@ -13,7 +14,8 @@ addons:
       - ubuntu-toolchain-r-test
     packages:
       - g++-4.8
+      - libasound2-dev
 before_install:
   - wget https://developer.spotify.com/download/libspotify/libspotify-12.1.51-Linux-x86_64-release.tar.gz
   - tar xzf libspotify-12.1.51-Linux-x86_64-release.tar.gz
-  - pushd libspotify-12.1.51-Linux-x86_64-release && sudo make install && popd
+  - pushd libspotify-12.1.51-Linux-x86_64-release && make install && popd
