--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,7 @@ node_js:
   - "0.12"
   - "0.10"
 env:
-  - CXX=g++-4.8
-  - CPATH=$TRAVIS_BUILD_DIR/libspotify-12.1.51-Linux-x86_64-release/include
-  - LIBRARY_PATH=$TRAVIS_BUILD_DIR/libspotify-12.1.51-Linux-x86_64-release/lib
+  - CXX=g++-4.8 CPATH=$TRAVIS_BUILD_DIR/libspotify-12.1.51-Linux-x86_64-release/include LIBRARY_PATH=$TRAVIS_BUILD_DIR/libspotify-12.1.51-Linux-x86_64-release/lib
 addons:
   apt:
     sources:
