--- a/.travis.yml
+++ b/.travis.yml
@@ -18,3 +18,4 @@ addons:
 before_install:
   - wget https://developer.spotify.com/download/libspotify/libspotify-12.1.51-Linux-x86_64-release.tar.gz
   - tar xzf libspotify-12.1.51-Linux-x86_64-release.tar.gz
+install: npm install --build-from-source
