--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-spotify",
-  "version": "0.7.3-alpha",
+  "version": "0.7.3",
   "description": "A wrapper for libspotify",
   "keywords": [
     "spotify",
